# norlab_trajectory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  package.xml  setup.py  update_library.sh
examples/: interpolation.py
examples/output/: f1tenth.csv  warthog.csv
examples/trajectories_examples/: f1tenth.csv  warthog.csv
include/: Trajectory.h
include/norlab_trajectory/: Trajectory.h
norlab_trajectory/: __init__.py
python/: CMakeLists.txt  bindings.cpp  test.py  trajectory.cpp  trajectory.h  trajectory_ros.py
scripts/: rosbag_to_tum_traj.py
src/: Trajectory.cpp  bindings.cpp  main.cpp
test/: interpolation.py
